# cc_spider

./: .gitignore  LICENSE  README.MD  build_cdx_index.sh  pyproject.toml
datatrove/: local_minhash_deduplication.py  process_common_crawl_fetched_files.py
notebook/: news_classifier_svm.ipynb  processing_stats.ipynb
src/cccd/: CDX_CLIENT_LICENSE  CDX_CLIENT_README.MD  build_db_index.py  cdx-index-client.py  chunk_downloader.py  classify.py  push_to_hub.py
src/cccd/core/: response_exceptions.py
src/cccd/db/: db_manager.py
src/cccd/db/dao/: web_doc_dao.py
src/cccd/db/model/: web_doc.py
src/cccd/db/utils/: gzip.py
src/cccd/model/: web_doct.py
src/cccd/utils/: clean_up.py  df_handle.py  fetchers.py  file_backed_set.py  interim_output.py  merge_dfs.py
